--- a/pom.xml
+++ b/pom.xml
@@ -1149,7 +1149,7 @@
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
                     image.photos.JsonMapperConfig.class,
-                    image.photos.springconfig.PhotosInMemoryDbConfig.class
+                    image.photos.junit4.testconfig.PhotosInMemoryDbConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-entities.groups>junit5</junit5.storage-entities.groups>
                 <junit5.storage-impl-hbm.groups>
@@ -1162,7 +1162,7 @@
                 <junit5.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory,
                     image.photos.JsonMapperConfig,
-                    image.photos.springconfig.PhotosInMemoryDbConfig,
+                    image.photos.junit4.testconfig.PhotosInMemoryDbConfig,
                     junit5&amp;photos&amp;inmemorydb,
                     junit5&amp;photos&amp;misc
                 </junit5.photos.groups>
@@ -1184,9 +1184,9 @@
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
                     image.photos.JsonMapperConfig.class,
-                    image.photos.springconfig.PhotosInMemoryDbConfig.class,
-                    image.photos.springconfig.PhotosStagingJdbcDbConfig.class,
-                    image.photos.springconfig.PhotosProdJdbcDbConfig.class
+                    image.photos.junit4.testconfig.PhotosInMemoryDbConfig.class,
+                    image.photos.junit4.testconfig.PhotosStagingJdbcDbConfig.class,
+                    image.photos.junit4.testconfig.PhotosProdJdbcDbConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-entities.groups>junit5</junit5.storage-entities.groups>
                 <junit5.storage-impl-hbm.groups>
@@ -1207,9 +1207,9 @@
                 <junit5.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory,
                     image.photos.JsonMapperConfig,
-                    image.photos.springconfig.PhotosInMemoryDbConfig,
-                    image.photos.springconfig.PhotosStagingJdbcDbConfig,
-                    image.photos.springconfig.PhotosProdJdbcDbConfig,
+                    image.photos.junit4.testconfig.PhotosInMemoryDbConfig,
+                    image.photos.junit4.testconfig.PhotosStagingJdbcDbConfig,
+                    image.photos.junit4.testconfig.PhotosProdJdbcDbConfig,
                     junit5&amp;photos&amp;inmemorydb,
                     junit5&amp;photos&amp;staging,
                     junit5&amp;photos&amp;production,
@@ -1249,7 +1249,7 @@
                     image.persistence.repository.springconfig.HbmStagingJdbcDbConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
-                    image.photos.springconfig.PhotosStagingJdbcDbConfig.class
+                    image.photos.junit4.testconfig.PhotosStagingJdbcDbConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
                     image.persistence.repository.springconfig.HbmStagingJdbcDbConfig,
@@ -1259,7 +1259,7 @@
                     junit5&amp;jpa2x&amp;staging
                 </junit5.storage-jpa2x-hbm-impl.groups>
                 <junit5.photos.groups>
-                    image.photos.springconfig.PhotosStagingJdbcDbConfig,
+                    image.photos.junit4.testconfig.PhotosStagingJdbcDbConfig,
                     junit5&amp;photos&amp;staging
                 </junit5.photos.groups>
                 <junit5.webapp.groups>
@@ -1299,7 +1299,7 @@
                     image.persistence.repository.springconfig.HbmProdJdbcDbConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
-                    image.photos.springconfig.PhotosProdJdbcDbConfig.class
+                    image.photos.junit4.testconfig.PhotosProdJdbcDbConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
                     image.persistence.repository.springconfig.HbmProdJdbcDbConfig,
@@ -1309,7 +1309,7 @@
                     junit5&amp;jpa2x&amp;production
                 </junit5.storage-jpa2x-hbm-impl.groups>
                 <junit5.photos.groups>
-                    image.photos.springconfig.PhotosProdJdbcDbConfig,
+                    image.photos.junit4.testconfig.PhotosProdJdbcDbConfig,
                     junit5&amp;photos&amp;production
                 </junit5.photos.groups>
                 <junit5.webapp.groups>
