--- a/webapp/src/main/resources/exifweb.properties
+++ b/webapp/src/main/resources/exifweb.properties
@@ -8,8 +8,8 @@ gallery3.tree.url=http://adrhc.asuscomm.com/pkg/gallery/index.php/rest/tree/
 gallery3.item.url=http://adrhc.asuscomm.com/pkg/gallery/index.php/rest/item/
 gallery3.thumbs.url=http://adrhc.asuscomm.com/photo/thumbs/
 gallery3.fullimage.url=http://adrhc.asuscomm.com/photo/albums/
-apache.access.log.prefix=xhttpd-2.2.29-access.log
-apache.error.log.prefix=xhttpd-2.2.29-error.log
+apache.access.log.prefix=nginx-access.log
+apache.error.log.prefix=nginx-error.log
 movie.name.prefix=BEGIN movie:
 album.image.file.name=.album.jpg
 # aceasta dimensiune trebuie corelata cu cea denotata de
