--- a/storage-entities/pom.xml
+++ b/storage-entities/pom.xml
@@ -34,7 +34,8 @@
         <dependency>
             <groupId>exifweb</groupId>
             <artifactId>util</artifactId>
-            <type>test-jar</type>
+            <classifier>tests</classifier>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
