--- a/storage-impl-hbm/pom.xml
+++ b/storage-impl-hbm/pom.xml
@@ -125,14 +125,16 @@
         <dependency>
             <groupId>exifweb</groupId>
             <artifactId>util</artifactId>
-            <type>test-jar</type>
+            <classifier>tests</classifier>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>exifweb</groupId>
             <artifactId>storage-entities</artifactId>
-            <type>test-jar</type>
+            <classifier>tests</classifier>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
 
