storage-jpa2x-hbm-impl: moved image.persistence to image.jpa2x

--- a/pom.xml
+++ b/pom.xml
@@ -846,6 +846,7 @@
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=org.hibernate.orm.core/org.hibernate.internal=ALL-UNNAMED</arg>
                             <arg>-sourcepath</arg>
                             <arg>
                                 ${project.basedir}/src/main/java${path.separator}${project.basedir}/target/generated-sources/annotations${path.separator}/
