--- a/storage-jpa2x-hbm-impl/pom.xml
+++ b/storage-jpa2x-hbm-impl/pom.xml
@@ -136,13 +136,15 @@
         <dependency>
             <groupId>exifweb</groupId>
             <artifactId>util</artifactId>
-            <type>test-jar</type>
+            <classifier>tests</classifier>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>exifweb</groupId>
             <artifactId>storage-entities</artifactId>
-            <type>test-jar</type>
+            <classifier>tests</classifier>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
 
