--- a/photos/pom.xml
+++ b/photos/pom.xml
@@ -90,6 +90,11 @@
         </dependency>
 
         <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>exifweb</groupId>
             <artifactId>util</artifactId>
             <classifier>tests</classifier>
